--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a href="index.html">Home</a>
         <a href="tutorial.html">Tutorial</a>
         <a href="faq.html">Further Questions</a>
+        <a href="QandA.html">Frequently asked Questions</a>
     </nav>
     <h1>Welcome to CAT Data Anaylsis</h1>
     <p>This website is a tool presented to you by
@@ -29,7 +30,7 @@
         easier!
     </p>
    <!--  <div id="includedContent"></div> -->
-    <iframe src="map.html" seamless width="600px" height="500px" id="center" ></iframe>
+    <iframe src="new_withpop.html" seamless width="600px" height="500px" id="center" ></iframe>
 
     <h2>Map goes here</h2>
 
@@ -41,5 +42,10 @@
         <input type="submit" value="Thank you!">
     </form>
 
+</body>
+<body>
+    <p>Introduction Video</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Z2wm5tbk2rU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    
 </body>
 </html>
