--- a/faq.html
+++ b/faq.html
@@ -12,6 +12,7 @@
         <a href="index.html">Home</a>
         <a href="tutorial.html">Tutorial</a>
         <a href="faq.html">Further Questions</a>
+        <a href="QandA.html">Frequently asked Questions</a>
     </nav>
 
     <h1>Frequently Asked Questions</h1>
