--- a/QandA.html
+++ b/QandA.html
@@ -1,31 +1,27 @@
-<html lang = "en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+{% extends 'base.html' %}
 
+{% block head %}
+<title>CAT Data</title>
 
-    </head>
-    <body>
-        <center><img src="BUS.png" alt="BUS" style="width: 300px; height: 300px;"></center>
-    </body>
-    <body>
+{% endblock %}
+
+{% block body %}
+<img src="BUS.png" alt="BUS" style="width: 300px; height: 300px;">
+
         <nav>
             <a href="index.html">Home</a>
             <a href="tutorial.html">Tutorial</a>
             <a href="faq.html">Further Questions</a>
             <a href="QandA.html">Frequently asked Questions</a>
         </nav>
-    </body>
-    <body> 
+ 
         <h2>What kind of payments are accepted on the bus?</h2>
         <p>These are the types of payments that are acceptable.</p>
-    </body>
-    <body> 
+
         <h3>INSERT MORE QUESTIONS HERE</h3>
         <p>These are the types of payments that are acceptable.</p>
-    </body>
-    <body> 
+
         <h4>INSERT MORE QUESTIONS HERE</h4>
         <p>These are the types of payments that are acceptable.</p>
-    </body>
+
+{% endblock %}
